--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ol,ul,li{
 }
 
 a{
-    color: black;
+    color: aliceblue;
     text-decoration: none;
 }
 
@@ -86,6 +86,9 @@ padding-left: 1.5rem
 .skills__title{
     display: flex;
     justify-content: center;
+    font-family: cursive;
+    font-weight: bold;
+    color: aliceblue;
 }
 
 
@@ -97,9 +100,11 @@ padding-left: 1.5rem
 .react{
     height: 85px;
     border-radius: 100px;
-}
-.react__text{
-    padding-left: 1.5rem;
+}   
+.skills__name{
+    color: aliceblue;
+    text-decoration: none;
+    justify-content: space-between;
 }
 
 
@@ -109,8 +114,9 @@ padding-left: 1.5rem
 .hobbies__title{
     display: flex;
     justify-content: center;
-    
-    font-weight:bold;
+    font-family: cursive;
+    font-weight: bold;
+    color: aliceblue;
 }
 
 
@@ -129,7 +135,9 @@ padding-left: 1.5rem
 .academic__title{
     display: flex;
     justify-content: center;
+    font-family: cursive;
     font-weight: bold;
+    color: aliceblue;
 }
 
 .academic__courses{
@@ -142,6 +150,9 @@ padding-left: 1.5rem
     display: flex;  
     justify-content: center;
     font-weight: bold;
+    font-family: cursive;
+    
+    color: aliceblue;
 }
 .experience__img{
     width: 450px;
@@ -160,6 +171,9 @@ flex-wrap: wrap;
 }
 .experience__title{
     padding-right: 1rem;
+    font-family: cursive;
+    font-weight: bold;
+    color: aliceblue;
 }
 .experience__description{
     align-items: center;
@@ -194,6 +208,9 @@ flex-wrap: wrap;
 .formcontacto__title{
     display: flex;
     justify-content: center;
+    font-family: cursive;
+    font-weight: bold;
+    color: aliceblue;
 }
 .formcontacto__img{
     display: flex;
@@ -203,6 +220,9 @@ flex-wrap: wrap;
 .formcontacto__subtext{
     display: flex;
     justify-content: center;
+    font-family: cursive;
+    font-weight: bold;
+    color: aliceblue;
 }
 .formcontacto__form{
     display: flex;
