--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ a{
 }
 .title__subsection{
     color: azure;
+    font-family: cursive;
 }
 .ul__container{
     display: flex;
@@ -78,9 +79,11 @@ padding-left: 1.5rem
 }
 .about__title{
     color: azure;
+    font-family: cursive;
 }
 .about__paragraph{
     color: azure;
+    font-family: cursive;
 }
 /*seccion de skills*/
 .skills__title{
