--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ a{
 }
 .title__bio{
     color: azure;
+    font-weight: bold;
+    font-family: cursive;
 }
 .title__subsection{
     color: azure;
@@ -106,7 +108,7 @@ padding-left: 1.5rem
 }   
 .skills__name{
     color: aliceblue;
-    text-decoration: none;
+   
     justify-content: space-between;
 }
 
@@ -133,7 +135,10 @@ padding-left: 1.5rem
 .hobbies__box{
     margin-top: 1.5rem;
 }
-
+.hobbies__name{
+    font-weight: bold;
+    color: aliceblue;
+}
 /*formacion academica*/
 .academic__title{
     display: flex;
