--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ padding-left: 1.5rem
 }
 
 
+
 .hobbies__box{
     margin-top: 1.5rem;
 }
@@ -152,6 +153,11 @@ padding-left: 1.5rem
     display: flex;
     justify-content: space-around;
 }
+.academic__courses__item__title{
+    color: aliceblue;
+    font-weight: bold;
+}
+
 
 /*experiencia profesional*/
 .experience__section__title{
