--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body{
 .menu{
     position:static;
 }
+@media screen and (min-width: 0) {
+.menu__list{
+    padding: 0 1rem;
+    justify-content: center;
+}
+}
 .menu__header{
     align-items:center ;
     display: flex;
